adjust consumers and asgi

--- a/mail_app/templates/mail_app/mail_list.html
+++ b/mail_app/templates/mail_app/mail_list.html
@@ -33,7 +33,7 @@
         <div id="progress-text">Reading messages...</div>
     </div>
     <script>
-        const ws = new WebSocket('ws://' + window.location.host + '/ws/mail/');
+        const ws = new WebSocket('ws://' + window.location.host + '/ws/as_mail/');
 
         ws.onmessage = function (event) {
             const data = JSON.parse(event.data);
