make signals and some fixes

--- a/mail_app/templates/mail_app/base.html
+++ b/mail_app/templates/mail_app/base.html
@@ -12,7 +12,7 @@
 <body>
     <header></header>
 
-    <div class="container">
+    <div class="container w-90">
         {% block content %}{% endblock %}
     </div>
     
