--- a/mail_app/templates/mail_app/index.html
+++ b/mail_app/templates/mail_app/index.html
@@ -4,6 +4,9 @@
 <form action="" method="POST" class="form">
     {% csrf_token %}
     {{ form }}
-    <button type="submit" class="btn btn-primary">Войти в почту</button>
+    <button type="submit" class="btn btn-primary mt-4">Войти в почту</button>
 </form>
+
+<p>mm.pyshkin@yandex.ru</p>
+<p>pprxyurridjfvoiv</p>
 {% endblock %}
