--- a/mail_app/templates/mail_app/index.html
+++ b/mail_app/templates/mail_app/index.html
@@ -1,12 +1,23 @@
 {% extends 'mail_app/base.html' %}
 
 {% block content %}
-<form action="" method="POST" class="form">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit" class="btn btn-primary mt-4">Войти в почту</button>
-</form>
 
-<p>mm.pyshkin@yandex.ru</p>
-<p>pprxyurridjfvoiv</p>
+<main class="form-signin w-25 m-auto">
+    <form action="" method="POST" class="form">
+        <h1 class="h3 mb-3 fw-normal">Введите данные от вашей почты</h1>
+        {% csrf_token %}
+        <div class="form-floating mb-3">
+            {{ form.email }}
+            <label for="floatingInput">Email</label>
+        </div>
+        <div class="form-floating mb-3">
+            {{ form.password }}
+            <label for="floatingPassword">Пароль</label>
+        </div>
+
+        <button class="btn btn-primary w-100 py-2" type="submit">Войти</button>
+        <p class="mt-5 mb-3 text-body-secondary">© 2024</p>
+    </form>
+</main>
+
 {% endblock %}
