--- a/mail_app/templates/mail_app/mail_list.html
+++ b/mail_app/templates/mail_app/mail_list.html
@@ -2,46 +2,76 @@
 
 {% block content %}
 
-<div id="progress-bar"></div>
-    <div id="progress-text">Reading messages...</div>
+<div class="d-flex align-items-flex-start flex-column">
+    <div class="my-5">
+        <h2 id="current-email">{{ current_email }}</h2>
+    </div>
+
+    <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 0%"></div>
+    </div>
+    <div class="my-3">
+        <span id="current-progress"></span>
+    </div>
+    
+    <table class="table table-hover table-primary text-center lg">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Subject</th>
+                <th>Sent Date</th>
+                <th>Received Date</th>
+                <th>Body</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider"></tbody>
+        
+    </table>
 </div>
-<table class="table table-hover table-primary text-center">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Subject</th>
-            <th>Sent Date</th>
-            <th>Received Date</th>
-            <th>Body</th>
-        </tr>
-    </thead>
-    <tbody class="table-group-divider">
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-        </tr>
-    </tbody>
-    <!-- <tbody>
-        {% for message in messages %}
-        <tr>
-            <td>{{ message.subject }}</td>
-            <td>{{ message.sent_date }}</td>
-            <td>{{ message.received_date }}</td>
-            <td>{{ message.body|truncatechars:50 }}</td>
-        </tr>
-        {% endfor %}
-    </tbody> -->
-</table>
+    <script>
+        
+        const addNewMessage = (mess) => {
+            // let mess = ms.message;
+            let tbody = document.querySelector('tbody');
+            let row = tbody.insertRow();
+            let cell1 = row.insertCell();
+            let cell2 = row.insertCell();
+            let cell3 = row.insertCell();
+            let cell4 = row.insertCell();
+            let cell5 = row.insertCell();
+            cell1.innerHTML = mess['id'];
+            cell2.innerHTML = mess['subject'];
+            cell3.innerHTML = mess['sent_date'];
+            cell4.innerHTML = mess['received_date'];
+            cell5.innerHTML = mess['body'];
 
-<script>
-    const ws = new WebSocket('ws://' + window.location.host + '/ws/as_mail/');
+            row.addEventListener('click', () => {
+                window.location.href = `${mess['id']}/`;
+            })
+        }
 
-    ws.onmessage = function (event) {
-        const data = JSON.parse(event.data);
-        console.log('Новое сообщение:', data.message);
-    };
-</script>
+        const email = document.getElementById('current-email').innerHTML
+        //const sanitizedEmail = email.replace('@', '_at_').replace('.', '_dot_');
+
+        const ws = new WebSocket('ws://' + window.location.host + `/ws/as_mail/${email}/`);
+        
+
+        ws.onmessage = function (event) {
+            const data = JSON.parse(event.data);
+            console.log('Новое сообщение:', data.message);
+            addNewMessage(data.message);
+
+            const progressBar = document.querySelector('.progress-bar');
+            progressBar.style.width = data.message.progress + '%';
+            progressBar.setAttribute('aria-valuenow', data.message.progress);
+            if (data.message.progress === 100) {
+                ws.close();
+                console.log('Соединение закрыто');
+                progressBar.style.display = 'none';
+            }
+
+            let current = document.getElementById('current-progress')
+            current.innerHTML = `${data.message.message_count} / 600`;
+        };
+    </script>
 {% endblock %}
